01 - OpenCRVS Documentation/v1.7/product-specifications/support-functions/12.-deduplication.md
---
title: "15. Deduplication"
source_url: "https://documentation.opencrvs.org/v1.7/product-specifications/support-functions/12.-deduplication"
markdown_url: "https://documentation.opencrvs.org/v1.7/product-specifications/support-functions/12.-deduplication.md"
version: "v1.7"
retrieved_at: "2026-09-16T15:06:42Z"
content_hash: "sha256:4171784b4960abadf8595229ed5b860655e1c1f1449f0299f5b6ee125b1ff2d3"
---

> For the complete documentation index, see [llms.txt](https://documentation.opencrvs.org/llms.txt). Markdown versions of documentation pages are available by appending `.md` to page URLs; this page is available as [Markdown](https://documentation.opencrvs.org/v1.7/product-specifications/support-functions/12.-deduplication.md).

# 15. Deduplication

OpenCRVS employs a robust matching algorithm, leveraging the capabilities of ElasticSearch. By automatically detecting potential duplicates, OpenCRVS prompts the Registrar to carefully review these declarations before proceeding with the registration process. This proactive approach ensures that duplicate records are promptly addressed and minimises the chances of duplicate civil registration records from existing. To learn more about how deduplication works please refer to [OpenCRVS Specifications 1.4: Deduplication ](https://docs.google.com/spreadsheets/d/1Jf31WkNMqlfQOYpjpfG73M5utVGrx4zqA5eiODaftNI/edit#gid=1336903440)

### **Pre-condition**

Declaration status is in-progress

### **Triggers**

* User with `scope:record.declaration-send-for-review` sends complete declaration for review
* User with `scope:record.declaration-send-for-approval` starts and sends declaration for approval
* User with `scope:record.register` starts and then registers a declaration

### **Standard flow**

1. Each trigger action listed above prompts a deduplication check
2. If deemed a potential duplicate the declaration will show in the Ready for review workqueue for a user with `scope:record.review-duplicates`
3. User assigns themselves to the potential duplicate declaration
4. User clicks “Review”
5. User is prompted to check the potential duplicate declaration against matched records
6. User clicks on the tab of a flagged record
7. User compares the potential duplicate declaration against the matched record side by side
8. User reviews any other matched records
9. User returns to the potential duplicate declaration view after making an assessment
10. User clicks “Not a duplicate”
11. User confirms their decision

### **Post conditions**

* Declaration status remains ‘In review’ and in Ready for Review workqueue.
* Record audit is updated to show that the declaration was marked not a duplicate

### **Variations/Exceptions**

#### Marking as a duplicate

* User clicks “Mark as a duplicate”
* User prompted to select the record it is a duplicate of
* User prompted to add a reason for their decision
* User confirms their decision to mark it as a duplicate

#### Post conditions

* Declaration status changed to ‘Archived’. Declaration removed from all workqueues
* Record audit is updated to show that the declaration was marked as a duplicate and was archived

{% embed url="<https://youtu.be/28WC1d8VVas>" %}


---

# Agent Instructions
This documentation is published with GitBook. GitBook is the documentation platform designed so that both humans and AI agents can read, navigate, and reason over technical content effectively. Learn more at gitbook.com.

## Querying This Documentation
If you need additional information that is not directly available in this page, you can query the documentation dynamically by asking a question.

Perform an HTTP GET request on the current page URL with the `ask` query parameter, and the optional `goal` query parameter:

```
GET https://documentation.opencrvs.org/v1.7/product-specifications/support-functions/12.-deduplication.md?ask=<question>&goal=<endgoal>
```

`ask` is the immediate question: it should be specific, self-contained, and written in natural language.
`goal` is optional and describes the broader end goal you are ultimately trying to accomplish on behalf of the user. GitBook uses it to tailor the answer towards what is most useful for that goal.

The response will contain a direct answer to the question and relevant excerpts and sources from the documentation.

Use this mechanism when the answer is not explicitly present in the current page, you need clarification or additional context, or you want to retrieve related documentation sections.
